--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 description=Say something about this template.
 name=Scala Project
-organization=org.example
+organization=scalabo
 version=0.1-SNAPSHOT
 scala_version=2.10.1
